# clivi_mcp_gateway

./: .firebaserc  .gitignore  PLANNING.md  README.md  db_sample.json  pyproject.toml  requirements.txt
.cursor/rules/: middle.mdc
adapters/: cli.py
core/: agent.py  session.py
functions/: package-lock.json  package.json
functions/src/api/webhook/: chargebee.ts
functions/src/contexts/: FirebaseMCPContext.ts  HubSpotMCPContext.ts
functions/src/core/: MCPServer.ts
functions/src/models/: AdminUserContext.ts  CRMUserContext.ts  SubscriptionEvent.ts
src/mcp/: base.ts  chargebee.ts  firebase.ts  hubspot.ts
src/utils/: config.ts
tests/: test_agent.py  test_sanity.py  test_session.py
