[tool.poetry]
name = "drclivi2"
version = "0.1.0"
description = "Task and session management with TaskMaster MCP, SOLID, and Screaming Architecture."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.0"
# taskmaster-mcp = "<add correct version or source here>"
google-adk = "*"  # Add the correct version if known

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 